--- a/css/stylemenu.css
+++ b/css/stylemenu.css
@@ -131,14 +131,25 @@ font-size: 12px;}
 
 /*ABOUT US TEXT */
 
-.aboutustext {color: #fff;
-  margin-left: 3%;
-  margin-right: 4%;
+.blogBody{ margin-left: 8%;
+  margin-right: 8%;
   padding-top: 3%;
   font-size: 15px;
   padding-right: 5%;
-  padding-left: 4%;
+  padding-left: 4%;}
+
+.aboutusblog {color: #fff;
+
+ 
 }
+.aboutustext {
+  color: #fff;
+margin-left: 8%;
+  margin-right: 8%;
+  padding-top: 3%;
+  font-size: 15px;
+  padding-right: 5%;
+  padding-left: 4%;}
 
 p {text-align: left;}
 
@@ -151,6 +162,219 @@ h1 {color: #ffa200 !important; text-align: left;}
   height: auto;
 }
 
+/*BLOG.HTML*/
+.blog-title {
+  color: #ffa200;
+  font-family: Georgia, 'Times New Roman', Times, serif;
+  font-size: 30px;
+  text-align: center;
+  margin-top: 5%;
+  padding-top: 1%;
+
+}
+
+.blogimage {
+max-width: 400px;}
+
+.blog-entry {color: #ffa200;
+font-size: 16px;}
 
 
 
+
+/*END OF BLOG */
+
+
+/*MENU DROPDOWN */
+.drop1btn {
+  background-color: rgb(255, 255, 255,0);
+  color: white;
+  padding: 16px;
+  font-size: 16px;
+  border: none;
+  cursor: pointer;
+}
+
+.drop1down {
+  position: relative;
+  display: inline-block;
+}
+
+.drop1down-content {
+
+  z-index: 999;
+  display: none;
+  position: absolute;
+  background-color: #501c1c;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+
+.drop1down-content a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+.drop1down-content a:hover {background-color: #f1f1f1}
+
+.drop1down:hover .drop1down-content {
+  display: block;
+  position: absolute;
+  
+  z-index: 999;
+
+}
+
+.drop1down:hover .drop1btn {
+  background-color: #3e8e41;
+}
+
+/*end of menu dropdown */
+
+
+/*CLIENTS*/
+
+.clients-title {
+  color: #ffa200;
+  font-family: Georgia, 'Times New Roman', Times, serif;
+  font-size: 30px;
+  text-align: center;
+  margin-top: 5%;
+  padding-top: 1%;
+
+}
+
+* {
+  box-sizing: border-box;
+}
+
+body {
+  margin: 0;
+  font-family: Arial;
+}
+
+
+#row1 {
+  display: -ms-flexbox; /* IE10 */
+  display: flex;
+  -ms-flex-wrap: wrap; /* IE10 */
+  flex-wrap: wrap;
+  padding: 0 4px;
+  padding-right: 10%;
+  padding-left: 10%;
+}
+
+/* Create four equal columns that sits next to each other */
+.column1 {
+  -ms-flex: 25%; /* IE10 */
+  flex: 25%;
+  max-width: 25%;
+  padding: 0 4px;
+}
+
+.column1 img {
+  margin-top: 8px;
+  vertical-align: middle;
+  width: 100%;
+}
+
+/* Responsive layout - makes a two column-layout instead of four columns */
+@media screen and (max-width: 800px) {
+  .column1 {
+    -ms-flex: 50%;
+    flex: 50%;
+    max-width: 50%;
+  }
+}
+
+/* Responsive layout - makes the two columns stack on top of each other instead of next to each other */
+@media screen and (max-width: 600px) {
+  .column1 {
+    -ms-flex: 100%;
+    flex: 100%;
+    max-width: 100%;
+  }
+}
+
+/*menu dropdown*/
+.drop1btn {
+  background-color: #04AA6D;
+  color: white;
+  padding: 16px;
+  font-size: 16px;
+  border: none;
+ z-index: 1000;
+
+}
+
+.drop1down {
+  position: relative;
+  display: inline-block;
+ 
+}
+
+.drop1down-content {
+  display: none;
+  position: absolute;
+  background-color: #c02c2c;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1000;
+  right: 100px;
+ 
+  
+}
+
+.drop1down-content a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+
+}
+
+.drop1down-content a:hover {background-color: #ddd;}
+
+.drop1down:hover .drop1down-content {display: block;}
+
+.drop1down:hover .drop1btn {background-color: #3e8e41;}
+
+
+/*FAQ SECTION */
+.faqdropdown {margin-left: 10%;
+  margin-right: 10%; margin-top: 2%;
+margin-bottom: 4%;}
+
+  .faq-title{color: #ffa200;
+text-align: center; margin-top: 3%; }
+
+
+.collapsible {
+  background-color: #00655e;
+  color: white;
+  cursor: pointer;
+  padding: 18px;
+  width: 100%;
+  border: none;
+  text-align: left;
+  outline: none;
+  font-size: 15px;
+ 
+}
+
+.active, .collapsible:hover {
+  background-color: #ffa200;
+  color: #252525;
+}
+
+.content {
+  padding: 0 18px;
+  max-height: 0;
+  overflow: hidden;
+  transition: max-height 0.2s ease-out;
+  background-color: #f1f1f1;
+  margin-bottom: 1%;
+}
